--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
     "project": {
         "name": "mybgg",
-        "title": ""
+        "title": "Karim's Games"
     },
     "boardgamegeek": {
-        "user_name": "YOUR_BGG_USERNAME",
+        "user_name": "karimsoliman94",
         "extra_params": {
             "own": 1
         }
     },
     "algolia": {
-        "app_id": "YOUR_APP_ID",
-        "api_key_search_only": "YOUR_PUBLIC_API_KEY",
-        "index_name": "YOUR_INDEX_NAME",
+        "app_id": "PFI2RYQ69U",
+        "api_key_search_only": "b71e51dd852bba4d4041513eb7b16598",
+        "index_name": "boardgames_01152023",
         "hits_per_page": 24
     }
 }
