--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -31,4 +31,6 @@ jobs:
         APIKEY: ${{secrets.APIKEY}}
       if: env.APIKEY != null
       run: |
-        python scripts/download_and_index.py --apikey ${{env.APIKEY}}
+        python scripts/download_and_index.py --apikey ${{env.APIKEY}
+        }
+    - uses: gautamkrishnar/keepalive-workflow@v1 # using the workflow with default settings
