--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -22,6 +22,8 @@ declxml==1.1.3
     # via -r scripts/requirements.in
 idna==3.7
     # via requests
+multidict==5.2.0
+    # via -r scripts/requirements.in
 pillow==10.3.0
     # via colorgram-py
 platformdirs==4.1.0
